# strix

./: .gitignore  .markdownlint.yaml  README.md  __init__.py  __main__.py  analyzer.py  bundle_domain.py  bundle_exporter.py  bundle_parser.py  cli.py  cost_model.py  dataflow.py  dataflow_exporter.py  domain.py  double_buffer_expert_ling2.6.yaml  exporters.py  fusedMoE_ling2.6.yaml  fusedMoE_v2_MiMo.yaml  hardware.py  multi_expert_pipeline_fp8.profile.yaml  op_events.py  package-lock.json  package.json  parser.py  perf.md  pyproject.toml  simulator.py  sweep_multi_expert_ling2.6.yaml  sweep_multi_expert_mimo_v2.yaml  sweep_multi_expert_mimo_v2_fp8.yaml  value_resolver.py
.github/: CODEOWNERS
docs/: fused-moe-perf-analysis.md  fused_moe_performance_analysis.md  index.md
kernels/: README_DMA_BENCHMARK.md  __init__.py  _fused_moe_configs.py  _fused_moe_impl.py  _fused_moe_v2_configs.py  _fused_moe_v2_impl.py  dma_double_buffer_load.py  dma_v1_reuse.py  dma_v2_no_reuse.py  dma_v3_dynamic.py  double_buffer_expert.py  double_buffer_expert_ablation.py  double_buffer_expert_dma.py  double_buffer_expert_no_cast.py  double_buffer_expert_no_epilogue.py  double_buffer_expert_no_wb.py  expert_ffn.py  fused_moe.py  fused_moe_v2.py  multi_expert_pipeline.py  multi_expert_pipeline_fp8.py
scripts/: benchmark_job.yaml  benchmark_runner.py  cross_compile.py  overhead_sweep.py  run_benchmark.sh  sweep_multi_expert.py  sweep_multi_expert_device.py  test_multi_expert_correctness.py
tests/: test_benchmark_runner.py  test_benchmark_scripts.py  test_benchmark_sweep.py  test_cli_dataflow.py  (+17 more)
(+929 files in other folders)
